238 ==> 102045 - RAW conversion in digikam fails to convert or generate preview.
239 ==> 137281 - Cannot convert nef into raw.
240 ==> 230763 - Exif ISO data missing when converting Olympus ORF.
241 ==> 137278 - 16-bit/channel workspace when working with RAW conversions.
242 ==> 133004 - Canon CRW portrait preview upside-down.
243 ==> 221345 - Do not process search immediately when enter text to query.
244 ==> 396234 - Add a feature which allow to switch latitude and longitude.
245 ==> 396283 - Missing images in album preview.
246 ==> 396352 - Some iptc tags are not displayed in the metadata part.
247 ==> 396434 - Uncontrolled log messages oversize log file up to run out of disk space.
248 ==> 396482 - Empty folder selector window after select and click on "Import selected elements".
249 ==> 396170 - Gallery creation error.
250 ==> 140374 - HTML Gallery export fails to parse xml from non-UTF8 metadata in jpeg.
251 ==> 396712 - "Save Search" does not work.
252 ==> 396944 - Integrity constraint violation on Albums.icons when migrating from sqlite to mysql.
253 ==> 396952 - Cut and Paste Into Caption Has Incorrect Font Initially.
254 ==> 091562 - Change order of pictures in the virtual album manually.
255 ==> 098340 - Re-sort images in albums
256 ==> 177355 - Feature request: export slideshow in lighttable.
257 ==> 158520 - Wishlist sort thumbnails manually and rename images.
258 ==> 191000 - Wish: Visual tool to change the sort order of photos.
259 ==> 216802 - digiKam ability to sort album with "picture is before picture".
260 ==> 230136 - It lacks the ability to sort photos manually.
261 ==> 236249 - Wish: custom sort in album view.
262 ==> 323559 - Wish: Albums like Playlists in Amarok.
263 ==> 337002 - Manual image sort.
264 ==> 397167 - Some tags are not displayed on the preview.
265 ==> 397207 - Too many open files, when reverse geocoding many images.
266 ==> 397278 - DNG conversion not possible.
267 ==> 